--- a/assets/style.css
+++ b/assets/style.css
@@ -67,3 +67,29 @@ button.custom-map-control-button[style] {
     width: 100%;
 }
 
+/* for slideshow and images in slideshow*/
+.mySlides {
+    display: none;
+}
+.roadTripImg {
+    vertical-align: middle;
+    width: 100%;
+    height: 865px;
+}
+
+/* Slideshow container */
+.slideshow-container {
+  position: relative;
+  margin: auto;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
