--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -26,7 +26,9 @@
     height: 75%;
     margin-bottom: 50px;
 }
-html, body {
+
+html,
+body {
     height: 100%;
     margin: 0;
     padding: 0;
@@ -39,7 +41,7 @@ html, body {
     height: 40px;
     width: 220px;
     font-family: 'Mulish', sans-serif;
-    color: rgb(0,0,0);
+    color: rgb(0, 0, 0);
     font-size: 18px;
     font-weight: bold;
     background: rgb(255, 255, 255);
@@ -47,12 +49,13 @@ html, body {
 
 .custom-map-control-button:hover {
     cursor: pointer;
-  }
+}
 
 /* This displays the location box to have responsive layout */
 button.custom-map-control-button[style] {
     left: 40% !important;
 }
+
 #btn {
     background-color: yellow;
 }
@@ -71,6 +74,7 @@ button.custom-map-control-button[style] {
 .mySlides {
     display: none;
 }
+
 .roadTripImg {
     vertical-align: middle;
     width: 100%;
@@ -79,17 +83,22 @@ button.custom-map-control-button[style] {
 
 /* Slideshow container */
 .slideshow-container {
-  position: relative;
-  margin: auto;
+    position: relative;
+    margin: auto;
 }
 
 /* Fading animation */
 .fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
 }
 
 @keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1
+    }
 }
