--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -71,6 +71,18 @@ button.custom-map-control-button[style] {
     font-weight: bolder;
 }
 
+/* Div containing the image for the info window */
+.img-box {
+    display: flex;
+    justify-content: center;
+}
+
+/* image within the info window */
+.infoImg {
+    width: 100%;
+    height: auto;
+}
+
 .textBox {
     text-align: center;
     height: 40px;
