--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -9,8 +9,8 @@
 #textImg {
     position: absolute;
     z-index: 1;
-    top: 69px;
-    right: 93px;
+    top: 55px;
+    left: 106px;
     font-family: 'Montserrat', sans-serif;
     font-size: 50px;
     color: red;
@@ -34,9 +34,12 @@
 
 html,
 body {
+    overflow: auto;
     height: 100%;
     margin: 0;
     padding: 0;
+    background-image: url("./images/mohammad-alizade-S5uV7ro4UPY-unsplash.jpg");
+    background-size: contain;
 }
 
 /* Location box CSS */
@@ -123,6 +126,7 @@ button.custom-map-control-button[style] {
 }
 
 #hero-body {
+    position: relative;
     padding: 10px;
     padding-right: 50px;
     padding-left: 50px;
