--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -92,6 +92,25 @@ button.custom-map-control-button[style] {
     margin-bottom: 10px;
 }
 
+/* marker headers on map */
+.marker-header {
+    font-size: 100%;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bolder;
+}
+
+/* Div containing the image for the info window */
+.info-box {
+    display: flex;
+    justify-content: center;
+}
+
+/* image within the info window */
+.infoImg {
+    width: 100%;
+    height: auto;
+}
+
 /* for slideshow and images in slideshow*/
 .mySlides {
     display: none;
