--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -8,12 +8,13 @@
 
 #textImg {
     position: absolute;
-    z-index: 1;
     top: 55px;
     left: 106px;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 50px;
-    color: red;
+    z-index: 1;
+    font-family: 'Montserrat';
+    font-size: 3em;
+    font-weight: bolder;
+    color: #84a98c;
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
