--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -14,7 +14,7 @@
     font-family: 'Montserrat';
     font-size: 3em;
     font-weight: bolder;
-    color: #15616d;
+    color: #d68c45;
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
