--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -31,6 +31,7 @@
     margin-bottom: 10px;
     margin-left: 50px;
     margin-right: 50px;
+    border-radius: 3px;
 }
 
 html,
@@ -122,6 +123,7 @@ button.custom-map-control-button[style] {
     vertical-align: middle;
     width: 100vw;
     height: 60vh;
+    border-radius: 3px;
 }
 
 /* Slideshow container */
