added further styling to top 5 list

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -179,6 +179,7 @@ button.custom-map-control-button[style] {
     margin-right: 50px;
     border-radius: 3px;
     margin-bottom: 2%;
+    padding-bottom: 1%;
 }
 
 #topFiveHeader {
@@ -194,7 +195,7 @@ button.custom-map-control-button[style] {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-top: 1%
+    margin-top: 1%;
 }
 
 /* Container div for the top 5 list items */
@@ -203,6 +204,12 @@ button.custom-map-control-button[style] {
     flex-direction: column;
     font-family: 'Montserrat', sans-serif;
     text-align: center;
+    border-bottom: 1px solid black;
+}
+
+/* remove border from last child */
+.t5ListItemContainer:last-child {
+    border-bottom: none;
 }
 
 /* Header for the top 5 list items */
@@ -210,6 +217,25 @@ button.custom-map-control-button[style] {
     font-size: 200%;
 }
 
+/* Paragraph for rating */
+.ratingPara {
+    font-size: 125%;
+}
+
+/* Paragraph for rating total */
+.totalRatingPara {
+    font-size: 125%;
+}
+
+/* Paragraph for rating */
+.addressPara {
+    font-size: 125%;
+}
+
+/* Photo of the place */
+.placePhoto {
+    border-radius: 4px;
+}
 
 .hidden {
     display: none !important;
