changed the button text to 'recent searches', added event listeners to each search history input so that when user's click it then it will automatically place it in the input field, added CSS to recent search button

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -24,6 +24,12 @@
     padding-right: 50px;
 }
 
+/* search history button CSS */
+.dropdown {
+    margin-right: 10px;
+    margin-bottom: 5px;
+}
+
 /* Google maps CSS */
 #map {
     height: 75%;
