--- a/assets/style.css
+++ b/assets/style.css
@@ -82,20 +82,24 @@ button.custom-map-control-button[style] {
 
 #distanceTravel {
     min-width: 0px;
-    font-size: 13px;
+    font-size: 25px;
+    font-weight: bold;
+    font-family: 'Montserrat', sans-serif;
     text-align: center;
     min-height: 0px;
-    height: 40px;
+    height: 75px;
     width: 100%;
     margin-bottom: 10px;
 }
 
 #durationTravel {
     min-width: 0px;
-    font-size: 13px;
+    font-size: 25px;
+    font-weight: bold;
+    font-family: 'Montserrat', sans-serif;
     text-align: center;
     min-height: 0px;
-    height: 40px;
+    height: 75px;
     width: 100%;
     margin-bottom: 10px;
 }
@@ -176,15 +180,10 @@ button.custom-map-control-button[style] {
 /* Styles for the top 5 list */
 #topFiveContainer {
     background-color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     margin-left: 50px;
     margin-right: 50px;
     border-radius: 3px;
     margin-bottom: 2%;
-    padding-bottom: 1%;
 }
 
 #topFiveHeader {
@@ -209,6 +208,7 @@ button.custom-map-control-button[style] {
     flex-direction: column;
     font-family: 'Montserrat', sans-serif;
     text-align: center;
+    padding-bottom: 20px;
     border-bottom: 1px solid black;
 }
 
